BB-6662: Mobile / Tablet: FrontStore > Account > The pagination / sorting / buttons are misaligned above all grids - fixed buttons for mobile in grid-toolbar - fixed sortable tables arrow for mobile - fixed actions buttons

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/grid-header-cell.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/grid-header-cell.scss
@@ -13,11 +13,25 @@
 
             transition: all .2s;
         }
+
+        .grid-header-cell__link {
+
+        }
     }
     
     &.descending {
         .caret {
             transform: rotate(180deg);
+        }
+    }
+}
+
+@include breakpoint('tablet') {
+    .with-floating-header {
+        .grid-header-cell {
+            .caret {
+                margin-top: $offset-y-s;
+            }
         }
     }
 }
